--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -1,5 +1,17 @@
 % Sources:
 
+@article{Tompson_Haninger_2004,
+    title = {Content and ratings of teen-rated video games},
+    author = {Tompson, Kimberly M and Haninger, Kevin},
+    year = {2004},
+    month = {February},
+    journal = {JAMA},
+    doi = {https://doi.org/10.1001/jama.291.5.856},
+    volume = {291},
+    number = {7}
+
+}
+
 @article{Anderson_Bushman_2018,
     title = {Media Violence and the General Aggression Model},
     author = {Anderson, Craig A and Bushman, Brad J},
@@ -20,9 +32,7 @@
     address = {Cham},
     pages = {581--587},
     abstract = {Although video games can teach various skills, violent video games also teach players how to behave more aggressively. Hundreds of studies using different methodologies have shown that violent video games can increase aggressive thoughts, feelings, and behavior and can decrease empathy and prosociality. Longitudinal studies have found that habitually playing violent video games contributes to the development of aggressive behavior from childhood to young adulthood. Several established psychological theories can explain violent video game effects. Through observational learning, violent video games lead to positive evaluations of aggression and the formation of aggressive scripts. Habitually playing violent video games also leads to emotional desensitization and lower empathy with victims of real-world violence. The General Aggression Model proposes that playing violent games may lead to the learning, rehearsal, and reinforcement of aggression-related patterns of thinking that contribute to the development of aggression as a stable personality trait. Insights are offered for future research on topics such as virtual and augmented reality technologies, individual differences, and contextual factors that may moderate violent video game effects. Promising interventions for reducing violent video game effects are discussed. Suggestions to pediatricians and parents are offered.},
-    isbn = {978-3-031-69362-5},
-    doi = {10.1007/978-3-031-69362-5_79},
-    url = {https://doi.org/10.1007/978-3-031-69362-5_79}
+    doi = {https://doi.org/10.1007/978-3-031-69362-5_79}
 }
 
 @report{Przybylski_Warstein_2019,
@@ -32,8 +42,7 @@
     publisher = {Royal Society Open Science},
     volume = {6},
     number = {2},
-    doi = {10.1098/rsos.171474},
-    url = {https://doi.org/10.1098/rsos.171474}
+    doi = {https://doi.org/10.1098/rsos.171474}
 }
 
 @article{Lacko_Macháčková_Šmahel_2024,
@@ -42,9 +51,7 @@
     volume = {159},
     pages = {108341},
     year = {2024},
-    issn = {0747-5632},
     doi = {https://doi.org/10.1016/j.chb.2024.108341},
-    url = {https://www.sciencedirect.com/science/article/pii/S0747563224002097},
     author = {David Lacko and Hana Machackova and David Smahel},
     keywords = {Violent video games, Aggression, Empathy, Within-person effects, Adolescents, Longitudinal research},
     abstract = {The associations between exposure to violent video games (VVG) and aggression/empathy have been extensively studied. VVG are often depicted as triggers for increased aggression and decreased empathy in line with the General Aggression Model. However, longitudinal evidence that distinguishes within- and between-person effects and focuses on various dimensions of aggression/empathy remains scarce. Drawing on representative sample of 3010 Czech adolescents (aged 13–17), data were collected over four waves to measure physical and verbal aggression, and cognitive and affective empathy. VVG was evaluated based on open-ended responses. A random-intercept cross-lagged panel model was employed to differentiate within- and between-person associations. VVG positively correlated with cognitive empathy, verbal aggression, and physical aggression at the between-person level. At the within-person level, two hypotheses were examined: the selection effect (effects of changes in aggression/empathy on changes in VVG) and the desensitization effect (effects of changes in VVG on alterations in aggression/empathy). All desensitization effects were statistically insignificant. Regarding selection effects, an increase in affective empathy was linked to a decrease in VVG. Conversely, an increase in physical aggression was associated with an increase in VVG, both positively and negatively, depending on the wave of data collection. Furthermore, the moderation effects of age and gender were tested at the within-person level. The positive (but not negative) effect of physical aggression on exposure to VVG was moderated by age, with a stronger effect evident among younger participants. These findings challenge the portrayal of VVG as a significant contributor to heightened aggression and decreased empathy in adolescents.}
@@ -60,10 +67,7 @@
     year = {2020},
     month = {05},
     abstract = {In this essay, we advance the Critical Media Effects (CME) framework as a way of bridging two major subfields of communication that seldom speak to one another: media effects scholarship and critical cultural communication. Critical Media Effects is situated within the dominant mode of social scientific theorizing within media effects scholarship and draws on four key interrelated concepts from critical cultural communication: power, intersectionality, context, and agency. Critical Media Effects advocates for greater reflexivity, rigor, and nuance in theorizing about media effects to better respond to the complexity and dynamicity of emerging global sociopolitical mediated contexts. Recommendations, salient examples, and future directions for co-creating a shared research roadmap for CME are discussed. Through this work of bridging, we hope to promote more collaborative partnerships, productive engagement, and mutual solidarity across these two important subfields to address the most pressing social issues and challenges of the world today.},
-    issn = {0021-9916},
-    doi = {10.1093/joc/jqaa014},
-    url = {https://doi.org/10.1093/joc/jqaa014},
-    eprint = {https://academic.oup.com/joc/article-pdf/70/3/379/45054454/jqaa014.pdf},
+    doi = {https://doi.org/10.1093/joc/jqaa014}
 }
 
 @article{Carnagey_Anderson_Bushman_2007,
@@ -73,9 +77,7 @@
     number = {3},
     pages = {489-496},
     year = {2007},
-    issn = {0022-1031},
     doi = {https://doi.org/10.1016/j.jesp.2006.05.003},
-    url = {https://www.sciencedirect.com/science/article/pii/S0022103106000825},
     author = {Nicholas L. Carnagey and Craig A. Anderson and Brad J. Bushman},
     keywords = {Violent video games, Violent media, Desensitization, Helping, Prosocial},
     abstract = {Past research shows that violent video game exposure increases aggressive thoughts, angry feelings, physiological arousal, aggressive behaviors, and decreases helpful behaviors. However, no research has experimentally examined violent video game effects on physiological desensitization, defined as showing less physiological arousal to violence in the real world after exposure to video game violence in the virtual world. This experiment attempts to fill this gap. Participants reported their media habits and then played one of eight violent or nonviolent video games for 20min. Next, participants watched a 10-min videotape containing scenes of real-life violence while heart rate (HR) and galvanic skin response (GSR) were monitored. Participants who previously played a violent video game had lower HR and GSR while viewing filmed real violence, demonstrating a physiological desensitization to violence. Results are interpreted using an expanded version of the General Aggression Model. Links between desensitization, antisocial, and prosocial behavior are discussed.}
@@ -90,8 +92,6 @@
     pages = {235-245},
     keywords = {aggression, personality, positive affect, revenge, revenge-seeking},
     doi = {https://doi.org/10.1002/ab.21746},
-    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ab.21746},
-    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ab.21746},
     abstract = {People differ in how much they seek retribution for interpersonal insults, slights, rejections, and other antagonistic actions. Identifying individuals who are most prone towards such revenge-seeking is a theoretically-informative and potentially violence-reducing endeavor. However, we have yet to understand the extent to which revenge-seeking individuals exhibit specific features of aggressiveness, impulsivity, and what motivates their hunt for retribution. Toward this end, we conducted three studies (total N = 673), in which revenge-seeking was measured alongside these other constructs. Analyses repeatedly demonstrated that revenge-seeking was associated with greater physical (but not verbal) aggressiveness, anger, and hostility. Revenge-seeking's link to physical aggression was partially accounted for by impulses toward enjoying aggression and the tendency to use aggression to improve mood. Dominance analyses revealed that sadism explained the most variance in revenge-seeking. Revenge-seeking was associated with greater impulsive responses to negative and positive affect, as well as greater premeditation of behavior. These findings paint a picture of revenge-seekers as physically aggressive curators of anger, whose retributive acts are performed with planned malice and motivated by the act's entertaining and therapeutic qualities.},
     year = {2018}
 }
@@ -101,12 +101,11 @@
     abstract = "Mechanisms of moral disengagement in violent video game play have recently received considerable attention among communication scholars. To date, however, no study has analyzed the prevalence of moral disengagement factors in violent video games. To fill this research gap, the present approach includes both a systematic literature review and a content analysis of moral disengagement cues embedded in the narratives and actual game play of 17 top-ranked first-person shooters (PC). Findings suggest that moral disengagement factors are frequently embedded in first-person shooters, but their prevalence varies considerably. Most violent video games include justifications of the portrayed violence, a distorted portrayal of consequences, and dehumanization of opponents. Implications of the findings for research on violent games are discussed. {\textcopyright} 2014 {\textcopyright} 2014 National Communication Association.",
     author = "T. Hartmann and M. Krakowiak and M. Tsay-Vogel",
     year = "2014",
-    doi = "10.1080/03637751.2014.922206",
+    doi = "https://doi.org/10.1080/03637751.2014.922206",
     language = "English",
     volume = "81",
     pages = "310--332",
     journal = "Communication Monographs",
-    issn = "0363-7751",
     publisher = "Routledge",
     number = "3",
 }
@@ -116,7 +115,6 @@
     author = {Walkerdine, Valerie},
     year = {2007},
     publisher = {Palgrave Macmillan},
-    url = {https://link.springer.com/book/10.1057/9780230235373},
     doi = {https://doi.org/10.1057/9780230235373}
 }
 
@@ -130,10 +128,7 @@
     year = {2017},
     month = {07},
     abstract = {On average, girls and women are less involved with video games than are boys and men, and when they do play, they often prefer different games. This article reports two studies that investigated the dislikes of German females with regard to video games. Study 1 applied conjoint analysis to female respondents’ (N= 317) ratings of fictional video games and demonstrated that lack of meaningful social interaction, followed by violent content and sexual gender role stereotyping of game characters, were the most important reasons why females disliked the games. Study 2, an online survey (N= 795), revealed that female respondents were less attracted to competitive elements in video games, suggesting an explanation for gender-specific game preferences. These findings are discussed with respect to communication theory on interactive entertainment and their implications for applied video game design.},
-    issn = {1083-6101},
-    doi = {10.1111/j.1083-6101.2006.00301.x},
-    url = {https://doi.org/10.1111/j.1083-6101.2006.00301.x},
-    eprint = {https://academic.oup.com/jcmc/article-pdf/11/4/910/22317676/jjcmcom0910.pdf},
+    doi = {https://doi.org/10.1111/j.1083-6101.2006.00301.x}
 }
 
 @article{Blakemore_Robbins_2012,
@@ -146,8 +141,7 @@
     year = {2012},
     month = {09},
     abstract = {Adolescence is a developmental period characterized by increased risk-taking behavior, which can lead to adverse outcomes such as substance abuse, sexually transmitted infections and unintentional injuries. Here we review recent research on the neurobiological and psychological mechanisms underlying adolescent risk taking. We focus on studies that have used neuroimaging techniques to investigate brain development during adolescence, as well as behavioral studies that have examined decision-making processes in adolescents. We discuss how changes in brain structure and function during adolescence may contribute to increased risk-taking behavior, and we consider the implications of this research for interventions aimed at reducing risky behavior in adolescents.},
-    doi = {10.1038/nn.3177},
-    url = {https://de.scribd.com/document/235185658/Blakemore-Robbins-2012}
+    doi = {https://doi.org/10.1038/nn.3177}
 }
 
 @article{Steinberg_2008,
@@ -158,9 +152,7 @@
     pages = {78-106},
     year = {2008},
     note = {Current Directions in Risk and Decision Making},
-    issn = {0273-2297},
     doi = {https://doi.org/10.1016/j.dr.2007.08.002},
-    url = {https://www.sciencedirect.com/science/article/pii/S0273229707000536},
     author = {Laurence Steinberg},
     keywords = {Adolescents, Risk-taking, Social neuroscience, Reward-seeking, Self-regulation, Prefrontal cortex, Peer influence, Decision making, Dopamine, Oxytocin, Brain development},
     abstract = {This article proposes a framework for theory and research on risk-taking that is informed by developmental neuroscience. Two fundamental questions motivate this review. First, why does risk-taking increase between childhood and adolescence? Second, why does risk-taking decline between adolescence and adulthood? Risk-taking increases between childhood and adolescence as a result of changes around the time of puberty in the brain’s socio-emotional system leading to increased reward-seeking, especially in the presence of peers, fueled mainly by a dramatic remodeling of the brain’s dopaminergic system. Risk-taking declines between adolescence and adulthood because of changes in the brain’s cognitive control system—changes which improve individuals’ capacity for self-regulation. These changes occur across adolescence and young adulthood and are seen in structural and functional changes within the prefrontal cortex and its connections to other brain regions. The differing timetables of these changes make mid-adolescence a time of heightened vulnerability to risky and reckless behavior.}
@@ -182,8 +174,7 @@
     volume = {10},
     number = {2},
     pages = {219-236},
-    doi = {10.1007/s40894-024-00251-1},
-    url = {https://doi.org/10.1007/s40894-024-00251-1},
+    doi = {https://doi.org/10.1007/s40894-024-00251-1},
     abstract = {Social media have become a new context for adolescent identity development. However, it is challenging to build a thorough understanding of how social media and identity development are related because studies refer to different facets of social media engagement and use diverse concepts related to identity. This review synthesizes research on the relationships between quantity and quality of social media use and different dimensions of identity development, including identity exploration and commitment, self-concept clarity, and identity distress. The search conducted across four databases yielded 4,467 records, of which 32 studies were included in the analysis, comprising 19,658 adolescents with a mean age of 16.43 years (SD = 1.81) and an age range of eight to 26 years. Active participation in social media, rather than the amount of time spent on it, was associated with more identity exploration. Authenticity on social media, not idealized self-presentation, correlated with higher self-concept clarity. Additionally, adolescents who engaged in comparisons on social media demonstrated higher levels of identity exploration and identity distress. Overall, it seems to matter more for identity development what young people do on social media than how much time they spend on it.}
 }
 
@@ -196,10 +187,8 @@
     YEAR = {2025},
     NUMBER = {1},
     ARTICLE-NUMBER = {12},
-    URL = {https://www.mdpi.com/2813-9844/7/1/12},
-    ISSN = {2813-9844},
     ABSTRACT = {Background: Exposure to violent content through video games can shape perceptions of aggression as normative or acceptable, potentially desensitizing adolescents to violence and increasing the likelihood that they will engage in aggressive behavior in their real-world interactions. This narrative review examines the relationship between violent video games (VVGs) and youth aggression, addressing (i) VVG exposure through the lens of Social Learning Theory and the General Aggression Model; (ii) the biological determinants of aggressive behavior, including neurophysiological correlates and the potential modulatory role of the gut microbiome; (iii) and current evidence on the influence of VVG exposure on adolescent aggression. Results: VVG exposure may promote moral disengagement and reinforce aggressive behavior through rewarding violent actions, potentially leading to real-life aggression. Exposure to VVGs increases aggression by elevating cortisol levels, activating the sympathetic nervous system, stimulating the brain’s reward system, and disrupting neurotransmitter balance. Alterations in gut microbiome composition could occur as a result of engaging in VVGs, potentially mirroring the physiological responses observed in violent real-world activities. The relationship between VVGs and aggression among adolescents has been widely explored, with studies generally indicating that VVG exposure can lead to desensitization to violence, reduced empathy, and diminished prosocial behavior. VVGs have also been linked to both bullying perpetration and victimization dynamics among adolescents, contributing to mental health issues, which in turn exacerbate problematic gaming behaviors. Conclusions: While there is evidence suggesting that exposure to VVGs is associated with increased adolescent aggression, discrepancies in the literature highlight the need for further research aimed at improving our understanding of this phenomenon. The studies on this topic reveal significant limitations, including a predominance of cross-sectional designs, methodological shortcomings, small sample sizes, and challenges in generalizing results. Factors such as the developmental stages of the participants, the exclusion of females, and unmeasured variables during long follow-up periods further complicate interpretations. Moreover, parental responsibility and the effectiveness of age ratings require closer examination.},
-    DOI = {10.3390/psycholint7010012}
+    DOI = {https://doi.org/10.3390/psycholint7010012}
 }
 
 @article{Miedzobrodzka_2023,
@@ -211,10 +200,8 @@
     pages = {365--381},
     year = {2023},
     publisher = {Routledge},
-    doi = {10.1080/17470919.2023.2284999},
-    note ={PMID: 37990996},
-    URL = { https://doi.org/10.1080/17470919.2023.2284999},
-    eprint = { https://doi.org/10.1080/17470919.2023.2284999}
+    doi = {https://doi.org/10.1080/17470919.2023.2284999},
+    note ={PMID: 37990996}
 }
 
 @article{Sears_1961,
@@ -225,5 +212,5 @@
     volume = {63},
     number = {3},
     pages = {466--492},
-    doi = {10.1037/h0041249}
+    doi = {https://doi.org/10.1037/h0041249}
 }
