--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 Video games have become one of the most prevalent forms of entertainment among adolescents across the globe,
 with violent and death-related content present in many popular titles (\textit{e.g. Call of Duty, Fortnite, Grand Theft Auto}).
-Existing rating systems such as PEGI (EU) and ESRB (US) already flag the degree of violent realism in these games,
+Existing rating systems such as PEGI (EU) and ESRB (US) (\cite{Tompson_Haninger_2004}) already flag the degree of violent realism in these games,
 reflecting widespread public concern about the effects of such content on young people's development and moral reasoning.
 
 \subsection{Background and significance}
@@ -16,7 +16,7 @@ media, including video games, in fostering aggressive tendencies, empirical evid
 video game consumption remains correlational and far from conclusive (\cite{Ramasubramanian_Banjo_2020}). Still, the perception
 that violent video games might normalize aggression or death sustains an important social as well as scientific question:
 \textbf{how does repeated exposure to virtual violence shape adolescents' moral reasoning, emotional responses to and perception
-of real-world violence and harm?}
+of real-world violence and harm and how different are these affects within the same demographic group?}
 
 \subsection{Psychological mechanisms}
 From a psychological perspective, video games can engage several mechanisms, such as reward-processing systems, that reinforce and
@@ -56,7 +56,7 @@ to violent/death content is associated with increased tolerance for aggression, 
 harm to others. \\
 Based on desensitization and aggression models, we hypothesize that:
 \begin{enumerate}
-    \item Greater exposure to violent/death-related game content correlates with higher acceptrance of aggression and reduce empathy for
+    \item Greater exposure to violent/death-related game content correlates with higher acceptance of aggression and reduce empathy for
     pain and suffering in real life.
     \item Games that reward aggressive actions will amplify these associations compared to games without such reward systems.
     \item These relationships will differ by gender, with stronger effects expected among boys.
