--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -1,14 +1,17 @@
 \section{Methodology}
 \subsection{Research Design}
-This study will employ a mixed-methods approach, combining a quantitative, cross-sectional correlational design with exploratory moderation analyses and examination
-of potential relevant existing datasets. The primary data collection will involve administering standardized questionnaires with the aim to assess whether adolescents'
-exposure to violent and death-related content can be associated with changing perceptions of violence, moral reasoning, emotional responses and behavioral tendencies.
+This study will employ a single-methods approach using quantitative data collection through structured questionnaires. The data collection will involve administering 
+standardized questionnaires with the aim to assess whether adolescents' exposure to violent and death-related content can be associated with changing perceptions of 
+violence, moral reasoning, emotional responses and behavioral tendencies.
 
 \subsection{Participants}
-The target for this study is adolescents aged 12 to 20 years devided into two age groups. A sample size of approximately 100-200 participants will be recruited from secondary schools and clubs
+The target for this study is adolescents aged 12 to 20 years devided into two age groups. A sample size of approximately 100-200 participants will be recruited from secondary schools
 to ensure a sufficient and diverse representation. The geo-locational focus will be the set on urban and suburban regions within Nordrhine-Westphalia, Germany. \\
 For inclusion in the study, participants must access to video games at least twice a week. To ensure ethical compliance, informed consent will be obtained from all participants
-and participation will be voluntary, anonymous and in accordance with ethical guidelines. For participants under the age of 14, parental consent will also be required.
+and participation will be voluntary, anonymous and in accordance with ethical guidelines. For participants under the age of 14, parental consent will also be required. To ensure the
+upholding of the ethical standards of research involving minors, the questionnaires will only be made available to the students by the teachers and parents with no direct
+contact from our side.
+A secondary target group of parents and teachers may also be surveyed to gather additional contextual information on adolescents' gaming habits and parental mediation strategies.
 
 \subsection{Materials and Measures}
 A structured questionnaire will be developed to assess the key constructs of interest. The questionnaire will include validated scales and self-report items to measure:
@@ -24,7 +27,7 @@ A structured questionnaire will be developed to assess the key constructs of int
     \item \textbf{Perception of death and empathy for pain:} Utilizing instruments like the Basic Empathy Scale (BES) or the Empathy for Pain Questionnaire
     (\cite{Miedzobrodzka_2023}) to assess emotional and cognitive empathy toward others' suffering.
     \subitem e.g., "When I see someone get hurt, I feel sorry for them.", "I can understand how others feel when they are in pain."
-    \item \textbf{Demographics and Gender:} Collecting information on the participants age, gender and demographic background to explore potential moderating effects.
+    \item \textbf{Demographics and Gender:} Collecting information on the participants age and gender to explore potential moderating effects.
     \item \textbf{Control variables:} Including measures of average weekly playtime, game genre preference (competitive, narrative, cooperative), parental mediation
     (restrictive / active), and prior aggression incidents.
 \end{itemize}
@@ -34,14 +37,12 @@ All questionnaires will be administered in English and will have a German transl
 \subsection{Procedure}
 The Procedure follows the same structure for all participants. Access will be made available with a link to the online questionnaire.
 \begin{enumerate}
-    \item \textbf{Distribution:} The distribution will be handled through multiple channels to reach a diverse and representative sample of adolescents.
-        \subitem Schools: A person of authority will be contacted to distribute the link to students.
-        \subitem Clubs: Trainers or leaders will be contacted to distribute the link to members.
+    \item \textbf{Distribution:} The distribution will be handled through teachers and parents in the selected school in Nordrhine-Westphalia.
     \item \textbf{Consent:} Prior to participation the questionnaire will inform the adolescents that participation is entirely voluntary. It will inform that children under
     the age of 14 have to take the survey with parental consent. Anonymity and confidentiality will be assured.
     \item \textbf{Questionnaire sequence:}
+        \subitem Introduction, consent confirmation and short briefing
         \subitem Demographics, age and gender
         \subitem Video game exposure and habits
         \subitem Perception of violence, empathy and moral disengagement
-    \item \textbf{Debriefing:} After finishing the questionnaires participants will receive an explanation on the purpose of the survey.
 \end{enumerate}
