--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -17,9 +17,9 @@
 \usepackage[compact]{titlesec}%include title formatting package
 
 % Title Page
-\title{How does violence and death in video games affect adolescents' perception of death and violence in real life?}
+\title{How does violence and death in video games affect adolescents' perception of death and violence in real life in the area of North Rhine-Westphalia?}
 \author{Paul Szelag (5496535) and Anna Varga (5378192)}
-\date{October 1st 2025 \\Module: ARDA \\Fontys University of Applied Science - Informatics \\Venlo, Limburg, Netherlands}
+\date{December 9th 2025 \\Module: ARDA \\Fontys University of Applied Science - Informatics \\Venlo, Limburg, Netherlands}
 
 
 \begin{document}
@@ -39,7 +39,7 @@ This is the abstract.
 	
 \include{report_template_multipleFiles_Introduction} 
 \include{report_template_multipleFiles_Methods}
-\printbibliography[title=references]
+\printbibliography[title={References}]
 \end{document}
 	
 	
