finish results section

--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -214,3 +214,15 @@
     pages = {466--492},
     doi = {https://doi.org/10.1037/h0041249}
 }
+
+@article{Wang_Chan_Mak_Ho_Wong_Ho_2014,
+    title = {Prevalence and correlates of video and internet gaming addiction among Hong Kong adolescents: a pilot study},
+    author = {Wang, Chong-Wen and Chan, Cecilia L W and Mak, Kwok-Kei and Ho, Sai-Yin and Wong, Paul WC and Ho, Rainbow T H},
+    year = {2014},
+    month = {June},
+    day = {16},
+    journal = {The Scientific World Journal},
+    volume = {2014},
+    pages = {874648},
+    doi = {https://doi.org/10.1155/2014/874648}
+}
