--- a/research_paper/report_template_multipleFiles_Results.tex
+++ b/research_paper/report_template_multipleFiles_Results.tex
@@ -45,8 +45,8 @@ This indicates that while gaming is a common activity, excessive daily gaming is
 engaging in gaming for 0.5-3 hours daily. Extreme gaming intensities (exceeding 5 hours daily) were rare, reported by only 3\% of participants, whilst 5\% reported
 4-5 hours and 12\% reported 3-4 hours. The distribution approximated normality around a modal value of 2-4 hours daily, whith extrem outliers representing distribution tails
 rather than normative engagement patterns.\\
-Notably, these moderate patterns contradict assumptions about widespread gaming addiction. The finding that the modal category of 2-4 hours falls within leisure-time
-recommendations and that exessive gaming (>5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather than a pathological behaviour
+Notably, these moderate patterns contradict assumptions about widespread gaming addiction (\cite{Wang_Chan_Mak_Ho_Wong_Ho_2014}). The finding that the modal category of 2-4 hours falls within leisure-time
+recommendations and that exessive gaming (more than 5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather than a pathological behaviour
 in this adolescent cohort.\\
 
 \subsubsection{Gaming Frequency Per Week}
@@ -81,10 +81,10 @@ perceptions. From the students perspective, 12\% reported gaming solely with fri
 and with friends and 18\% reported playing primarily alone. Only 15\% reported gaming exclusively alone. In contrast, parents precieved a much higher prevalence of solitary
 games with 19\% reporting their child games exclusively alone and as much as 31\% reported their child gaming primarily alone. Only 8\% said their child only plays with friends
 and another 18\% said their child primarily plays with friends. This discrepancy suggests that parents may underestimate the social dimensions of their children's gaming
-activity.\\
+activity. \\
 The data indicates that while a substantial portion of adolescents do engage in social gaming, a significant minority also games alone. The divergence between student and parent
 reports highlights potential gaps in parental awareness of their children's gaming contexts. This has implications for understanding the social versus solitary nature of adolescent 
-gaming and the need for parental education regarding gaming behaviours.\\
+gaming and the need for parental education regarding gaming behaviours.\\ \\
 
 \subsubsection{Game Preferences and Genre Selection}
 
@@ -122,9 +122,24 @@ adolescents derive greater happines from violent gameplay compared to their fema
 
 \subsubsection{Aggression Level after prolonged Gaming}
 
+Figure 8 depics the aggressional changes in adolescents after prolonged gaming sessions as seen by the parents.
+\begin{enumerate}
+    \item \textbf{No change:} A majority of 52\% reported \textbf{no increase in aggression} after extended gaming periods, indicating that for many adolescents, gaming 
+    does not elicit heightened aggressive feelings.
+    \item \textbf{Decrease:} Interestingly, 18\% of parents observed a \textbf{decrease in aggression} in their children following prolonged gaming sessions. This suggests
+    that for some adolescents, gaming may serve as a stress-relieving activity that helps to reduce feelings of aggression.
+    \item \textbf{Increase:} Conversely, 23\% of parents reported an \textbf{increase in aggression} after their children engaged in extended gaming. This indicates that a 
+    subset of adolescents may experience heightened aggressive feelings as a result of prolonged gaming exposure.
+    \item \textbf{significant Increase} A small minority of 7\% of parents observed a \textbf{significant increase in aggression} following extended gaming sessions,
+    suggesting that for a few adolescents, gaming may exacerbate aggressive tendencies to a notable degree.
+\end{enumerate}
+
 \begin{wrapfigure}{r}{0.45\textwidth}
     \centering
     \includegraphics[width=0.45\textwidth]{images/Aggression growing after playing for a longer period.png}
     \caption{Self-Reported Aggression Levels After Prolonged Gaming Among Students}
     \label{fig: Aggression Levels}
 \end{wrapfigure}
+Combined, 70\% of parend reported either no change or a decrease in aggression after prolonged gaming, suggesting that for the majority of adolescents, gaming does not lead
+to increased aggressive feelings. However, the 30\% of parents who observed an increase in aggression indicates that a significant minority of adolescents may be susceptable
+to gaming-related agression. This highlights the need for further investigation into the factors that may mediate or moderate the relationship between gaming and aggression.\\
